--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/himself/IMG_20230710_004741_757.jpg);">
+				   	<li style="background-image: url(images/himself/10403.jpg); background-position:center;">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -88,15 +88,14 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					 <h1 style="color:cornflowerblue;margin-top: 40%;">Emir Yılmaz<hr>BACKEND DEVELOPER</h1>
-						   					<h2>Direkt İletişim için LinkedIn: <a href="https://www.linkedin.com/in/emir-y%C4%B1lmaz-428886237/" target="_blank">Emir Yılmaz</a></h2>
-												<p><a class="btn btn-primary btn-learn">CV İNDİR <i class="icon-download4"></i></a></p>
+						   					<h2 style="color: white;">Direkt İletişim için LinkedIn: <a href="https://www.linkedin.com/in/emir-y%C4%B1lmaz-428886237/" target="_blank">Emir Yılmaz</a></h2>
 											</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/himself/10403.jpg); background-position: center;">
+				   	<li style="background-image: url(images/himself/IMG_20230710_004741_757.jpg); background-position: center;">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -104,8 +103,6 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1 style="color: aliceblue; margin-top: 30%;">Yazılım Mühendisi <hr> Backend Developer</h1>
-
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
