--- a/index.html
+++ b/index.html
@@ -122,7 +122,14 @@
 									<div class="about-desc">
 										<span class="heading-meta">Hakkımda</span>
 										<h2 class="colorlib-heading">Ben Kimim ?</h2>
-										<p><strong>Merhaba Ben Emir Yılmaz</strong> İnönü üniversitesi Yazılım mühendisliği öğrencisyim.Genel olarak amacım bulunduğum sektörde işimi elimden geldiğince iyi yapmak ve bu sektöre adımı yazdıracak çalışmalar yapmaktır Genel hayat mottom ömür boyu öğrenci kalmaktır çünkü kendimi geliştirmem ve yeni şeyler öğrenmem hiç bitmeyecektir işte bu yüzden "Her gün daha iyiye"</p>
+										<p><strong>Merhaba Ben Emir Yılmaz</strong> İnönü üniversitesi Yazılım mühendisliği öğrencisyim. Yazılım Geliştirici özellikle de backend  geliştirici olma hedefim doğrultusunda Java, C#, Spring ve mikroservisler gibi kapsamlı ve derin teknolojiler üzerine çalışıyorum. Bu teknolojiler, benim için sadece diller veya araçlar değil; aynı zamanda güçlü, ölçeklenebilir ve güvenli sistemler inşa etme yeteneğimi geliştiren yapı taşları.
+
+											Öğrenim ve Uygulama Alanlarım:
+											
+											Java & C#: Nesne yönelimli programlama prensiplerini benimseyerek, sağlam ve esnek yazılımlar geliştiriyorum.
+											Spring Framework: Bu framework ile dependency injection, security, transactions ve RESTful services gibi alanlarda kendimi geliştiriyorum.
+											Mikroservis Mimarileri: Bağımsız hizmetler olarak tasarlanan sistemlerin modüler yapısını ve yönetimini öğreniyorum.
+											Her gün, yazılım dünyasındaki yenilikleri takip ediyor ve yeni teknolojileri öğrenerek kendimi sürekli geliştiriyorum. Bu sayede, yazılım mühendisliği alanında başarılı bir kariyerin temellerini atıyorum. Kendi hikayemi anlatırken, bu yolculuğun benim için ne kadar heyecan verici olduğunu hissedebiliyorum. Her yeni proje, her kod satırı, beni hedefime bir adım daha yaklaştırıyor.</p>
 									</div>
 								</div>
 							</div>
@@ -144,7 +151,7 @@
 								
 								<div class="row animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
+										<span class="icon2"><i class="fa fa-desktop"></i></span>
 										<h3>Web Development</h3>
 										<p>Html,Css,JavaScript,React,Vue,Bootstrap</p>
 									</div>
